# SystemMonitor

./: CMakeLists.txt  README.md
include/: Collector.h  CpuCollector.h  Logger.h  MemoryCollector.h  SystemMonitor.h  TempCollector.h
src/: CpuCollector.cpp  Logger.cpp  MemoryCollector.cpp  SystemMonitor.cpp  TempCollector.cpp  main.cpp
